fixed issue where mouse pointer was behind modal and backdrop covered modal

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -49,6 +49,12 @@
     margin: 4px auto;
     padding: 4px
 }
+.modal {
+    z-index: 10;
+}
+.backdrop {
+    z-index: 1;
+}
 .large {
     display: none;
 }
